# Learning_Phase

./: .gitignore  README.md  Technical_Report.md  pyproject.toml
CoreTask1/Seq2Seq/: report.md
CoreTask2/: Learning Phase _ Task 2.txt
CoreTask2/Generative/: demo.ipynb  gan.ipynb  report.md
CoreTask2/Segmentation/: report.md  road-segmentation.ipynb
Task - 1/Subtask-1/: Untitled.ipynb  Untitled1.ipynb  inferenceAndExperiment.ipynb  model1780145736.8573117.trhmodel  models and training.ipynb
Task - 1/Subtask-2/: Transformer2_model_parameter.trhmodel  Transformer_model_parameter.trhmodel  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  model_parameter2.trhmodel  model_parameter3.trhmodel
Task - 2/Subtask - 1/: README.md  a_more_unet_approach.ipynb  attempting_to_improve_recidual_connection.ipynb  intial_attempt.ipynb  main.ipynb
Task - 2/Subtask - 2/: README.md  data_visualisation.ipynb  finetuning_gan_01.ipynb  finetuning_gan_11.ipynb
Task-1/: Learning_Phase_Task1_Subtask2.ipynb  baselinemodels_1.py
Task-1/SubTask-1/: ablations.ipynb  baseline.ipynb  best_transformer_ranker.pth  demo.ipynb  transformer.ipynb
Task-1/SubTask-2/: base.ipynb  base_vocab.pt  base_words.pt  baseline_lstm.pth  data.py  demo.ipynb  test.csv  transformer.ipynb  transformer_vocab.pt  transformer_words.pt  validation.csv
Task-1/SubTask-3/: GPT.ipynb  base.ipynb  data.py
Task-1/Subtask-1/: BaselineModels_1 (1).ipynb  Encoder_Only (1).ipynb  Encoder_Only.ipynb  Learning_Phase_Task1_Subtask1.ipynb  README.md  Report.md  Technical_Report.md  baselinemodels_2.py  encoder_only.py  (+7 more)
(+316 files in other folders)
